# 1-1_rust

./: .gitignore  Cargo.toml  Readme.md
rustlings/clogic/: .gitignore  Cargo.toml
servers/clogic/: Cargo.toml
servers/clogic/migration/: Cargo.toml
servers/clogic/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230909_045006_create_swimlane.rs  m20230909_045633_create_ticket.rs
servers/clogic/src/: main.rs
servers/clogic/src/api/: board.rs  mod.rs
servers/clogic/src/models/: board.rs  swimlane.rs  ticket.rs
servers/clogic/src/schemas/: boards.rs
servers/clogic/src/settings/: app.rs  db.rs
servers/currybob/: Cargo.toml
servers/currybob/migrations/: 20230805083142_initial.sql
servers/currybob/src/: main.rs
servers/currybob/src/api/: board.rs  mod.rs  prelude.rs  swimlane.rs  ticket.rs
servers/currybob/src/domain/dto/: board.rs  mod.rs  swimlane.rs  ticket.rs
servers/currybob/src/entity/: board.rs  swimlane.rs  ticket.rs
servers/currybob/src/repository/: board.rs  prelude.rs  swimlane.rs  ticket.rs
servers/currybob/src/services/: board_service.rs  mod.rs  swimlane_service.rs  ticket_service.rs
servers/jiho-s/: .env  Cargo.toml
servers/jiho-s/configuration/: base.yaml
servers/jiho-s/migration/: .env  Cargo.toml
servers/jiho-s/migration/src/: lib.rs  m20230826_041737_create_board_table.rs  m20230826_042043_create_swimlane_table.rs  m20230826_042052_create_ticket_table.rs
servers/jiho-s/scripts/: init_db.sh
servers/jiho-s/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
servers/jiho-s/src/board/: mod.rs
servers/jiho-s/src/board/application/: board_port.rs  mod.rs
servers/jiho-s/src/board/application/command/: board_command.rs  mod.rs
servers/jiho-s/src/board/application/error/: board_error.rs  mod.rs
servers/jiho-s/src/board/application/service/: board_service.rs
servers/jiho-s/src/board/domain/: board.rs
servers/jiho-s/src/board/infrastructure/: board_adapter.rs  mod.rs  model.rs
servers/jiho-s/src/board/routes/: board_dto.rs  board_error.rs  board_routes.rs  mod.rs
servers/jiho-s/src/common/: mod.rs
servers/jiho-s/src/common/infrastructure/: error.rs
servers/jiho-s/src/common/routes/: model.rs
servers/jiho-s/src/entities/: board.rs  mod.rs  post.rs  prelude.rs  swimlane.rs  ticket.rs
servers/jiho-s/src/swimlane/routes/: mod.rs
(+93 files in other folders)
