[package]
name = "clogic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12.2", features=["sqlx-postgres", "macros", "runtime-actix-rustls"] }
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
