[package]
name = "rust_server_currybob"
description = "First rust server!"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "0.12.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "debug-print", "with-chrono", "with-json" ], default-features = false }
tokio = { version = "1.29.1", features = ["full"] }
