[package]
name = "jiho-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sea-orm = { version = "^0.12.1", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
migration-jiho = { path = "migration" }
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
thiserror = "1"
serde-aux = "4"
unicode-segmentation = "1"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1"
validator = "0.16"
tracing-actix-web = "0.7"
secrecy = {version = "0.8", features = ["serde"] }
async-trait = "0.1.73"

[dev-dependencies]
once_cell = "1.18"
claim = "0.5"
quickcheck = "1"
quickcheck_macros = "1"
fake = "2.6"
wiremock = "0.5"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
linkify = "0.10"

